[gd_scene load_steps=4 format=3 uid="uid://replay_file_selector"]

[ext_resource type="Theme" uid="uid://bql5sxaowafw3" path="res://resources/theme/wc3_theme.tres" id="1_theme"]
[ext_resource type="Script" path="res://src/ui/title_screen/replay_file_selector.gd" id="1_script"]

[node name="ReplayFileSelector" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("1_theme")
script = ExtResource("1_script")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "SELECT_REPLAY_FILE"

[node name="FileList" type="ItemList" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="RefreshButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "REFRESH_BUTTON"

[node name="LoadButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "LOAD_BUTTON"
disabled = true

[connection signal="item_selected" from="FileList" to="." method="_on_file_list_item_selected"]
[connection signal="pressed" from="HBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RefreshButton" to="." method="_on_refresh_button_pressed"]
